<resources>
    <string name="app_name">KikoPlay</string>
    <string name="desc_collection">%1$d 个项目</string>
    <string name="desc_item_n">未观看</string>
    <string name="desc_item_f">已看完</string>
    <string name="desc_item_p">播放到 %1$02d:%2$02d</string>
    <string name="play_pause">播放</string>
    <string name="fullscreen">全屏</string>
    <string name="danmu_show_hide">弹幕显示/隐藏</string>
    <string name="danmu_setting">弹幕设置</string>
    <string name="danmu_launch">发送弹幕</string>
    <string name="listError">获取播放列表时出错</string>
    <string name="listNotConnect">尚未设置KikoPlay局域网服务地址</string>
    <string name="listEmpyt">播放列表是空的</string>
    <string name="connectDialogTitle">KikoPlay服务地址</string>
    <string name="exitConfirmTip">再按一次退出</string>
    <string name="loadDanmuFaildTip">加载弹幕失败</string>
    <string name="blockTip">按类型屏蔽</string>
    <string name="settingTip">弹幕显示设置</string>
    <string name="blockType_top">顶部</string>
    <string name="blockType_roll">滚动</string>
    <string name="blockType_bottom">底部</string>
    <string name="desc_opacity">不透明度</string>
    <string name="desc_size">弹幕字号</string>
    <string name="desc_region">显示区域</string>
    <string name="desc_speed">弹幕速度</string>
    <string name="danmu_update">更新</string>
    <string name="danmu_updating">正在更新</string>
    <string name="danmuUpdateFailed">更新弹幕失败</string>
    <string name="subtitleInfoFailed">获取信息失败</string>
    <string name="danmu_count_tip">正在加载弹幕...</string>
    <string name="danmu_count_desc">弹幕数量：%d</string>
    <string name="source_title_info">%s - %s (%d)</string>
    <string name="source_delay_info">延迟: %ds</string>
    <string name="delay_dialog_title">设置延迟(s)</string>
    <string name="launch_dialog_title">发送弹幕(%s)</string>
    <string name="timeline_start_hint">开始(mm:ss)</string>
    <string name="timeline_duration_hint">时长(s)</string>
    <string name="timeline_add">添加</string>
    <string name="capture_image">截图到资料库</string>
    <string name="capture_snippet">截取片段到资料库</string>
    <string name="capture_image_task_sent">截图任务 %s 已发送</string>
    <string name="capture_snipped_start_tip">已选择截取开始位置[%s], 再次点击选择结束位置 </string>
    <string name="snippet_retain_audio">保留片段音频</string>
    <string name="snippet_dialog_title">片段截取</string>
    <string name="snippet_info">开始: %s 结束: %s 时长: %ds</string>
    <string name="capture_snipped_stop_tip">片段截取任务已发送</string>
    <string-array name="danmu_region">
        <item>1/4屏</item>
        <item>半屏</item>
        <item>3/4屏</item>
        <item>满屏</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
